- Gave thumbnails their own pane instead of having them overlap the main image, and laid out the image gallery (including the thumbnail list and main image) as a flex box - Fixed a bug where changing the style would not immediately change the main image

--- a/client/src/css/overview.css
+++ b/client/src/css/overview.css
@@ -5,6 +5,10 @@
   border-radius: 50%;
 }
 
+.style-thumbnail:hover {
+  cursor: pointer;
+}
+
 .overview-container {
   display: grid;
   grid-template-columns: 65% 35%;
@@ -21,8 +25,60 @@
 
 .image-gallery {
   grid-area: gallery;
+  overflow: hidden;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: stretch;
+}
+
+.gallery-thumbnails {
+  max-width: 100px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+}
+
+.main-image-pane {
   background-color: #dddddd;
+}
+
+.gallery-thumbnail-container {
+  height: 60px;
+  width: 60px;
+  margin: 10px;
   position: relative;
+  border: solid 1px #808080;
+  margin-bottom: 20px;
+}
+
+.gallery-thumbnail-container.current-photo::after {
+  background-color: #484848;
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  content: '';
+  top: 103%;
+  left: 0;
+}
+
+.gallery-thumbnail:hover {
+  cursor: pointer;
+}
+
+.gallery-thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  /* position: absolute; */
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+}
+
+.main-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .product-details {
@@ -35,44 +91,4 @@
 
 .product-description {
   grid-area: description;
-}
-
-.main-photo, .gallery-thumbnail{
-  max-width: 100%;
-  max-height: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.gallery-thumbnail:hover {
-  cursor: pointer;
-}
-
-.gallery-thumbnails {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: flex-start;
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
-
-.gallery-thumbnail-container {
-  height: 100px;
-  width: 70px;
-  position: relative;
-  border: solid 1px #808080;
-  margin-bottom: 20px;
-}
-
-.gallery-thumbnail-container.current-photo::after {
-  background-color: #484848;
-  height: 4px;
-  width: 72px;
-  position: absolute;
-  content: '';
-  top: 103%;
-  left: -1px;
 }
